--- a/data/config.json
+++ b/data/config.json
@@ -1,7 +1,7 @@
 {
   "constellations": [
     {
-      "name": "Constelación del Burro",
+      "name": "Constelaci\u00f3n del Burro",
       "starts": [
         {
           "id": 1,
@@ -20,9 +20,9 @@
           "timeToEat": 1,
           "stayDuration": 10.0,
           "amountOfEnergy": 1,
-          "healthImpact": -5.0,
-          "lifeTimeImpact": -15,
-          "researchEnergyCost": 1.5,
+          "healthImpact": -14.4,
+          "lifeTimeImpact": -10,
+          "researchEnergyCost": 8.8,
           "coordenates": {
             "x": 25,
             "y": 34
@@ -39,20 +39,20 @@
             },
             {
               "starId": 3,
-              "distance": 17
+              "distance": 30
             },
             {
               "starId": 5,
-              "distance": 22
+              "distance": 35
             }
           ],
           "radius": 0.2,
           "timeToEat": 2,
           "stayDuration": 8.0,
           "amountOfEnergy": 2,
-          "healthImpact": 4.0,
-          "lifeTimeImpact": 12,
-          "researchEnergyCost": 1.0,
+          "healthImpact": 2.1,
+          "lifeTimeImpact": 8,
+          "researchEnergyCost": 6.2,
           "coordenates": {
             "x": 37,
             "y": 15
@@ -65,24 +65,24 @@
           "linkedTo": [
             {
               "starId": 2,
-              "distance": 17
+              "distance": 30
             },
             {
               "starId": 4,
-              "distance": 65
+              "distance": 40
             },
             {
-              "starId": 12,
-              "distance": 95
+              "starId": 13,
+              "distance": 50
             }
           ],
           "radius": 1,
           "timeToEat": 1,
           "stayDuration": 8.0,
           "amountOfEnergy": 3,
-          "healthImpact": 5.0,
-          "lifeTimeImpact": 15,
-          "researchEnergyCost": 2.0,
+          "healthImpact": 2.8,
+          "lifeTimeImpact": 12,
+          "researchEnergyCost": 7.5,
           "coordenates": {
             "x": 75,
             "y": 43
@@ -95,29 +95,29 @@
           "linkedTo": [
             {
               "starId": 1,
-              "distance": 30
+              "distance": 25
             },
             {
               "starId": 3,
-              "distance": 28
+              "distance": 40
             },
             {
               "starId": 5,
-              "distance": 35
+              "distance": 30
             }
           ],
           "radius": 0.5,
           "timeToEat": 3,
           "stayDuration": 12.0,
           "amountOfEnergy": 2,
-          "healthImpact": 0.0,
-          "lifeTimeImpact": 0,
+          "healthImpact": -9.0,
+          "lifeTimeImpact": -5,
           "coordenates": {
             "x": 60,
             "y": 80
           },
           "hypergiant": false,
-          "researchEnergyCost": 1.5
+          "researchEnergyCost": 10.0
         },
         {
           "id": 5,
@@ -125,63 +125,35 @@
           "linkedTo": [
             {
               "starId": 2,
-              "distance": 22
-            },
-            {
-              "starId": 4,
               "distance": 35
             },
             {
-              "starId": 6,
-              "distance": 25
+              "starId": 4,
+              "distance": 30
             }
           ],
           "radius": 0.3,
           "timeToEat": 1,
           "stayDuration": 6.0,
           "amountOfEnergy": 1,
-          "healthImpact": 2.5,
-          "lifeTimeImpact": 10,
+          "healthImpact": 1.4,
+          "lifeTimeImpact": 6,
           "coordenates": {
             "x": 95,
             "y": 25
           },
           "hypergiant": false,
-          "researchEnergyCost": 0.5
+          "researchEnergyCost": 3.8
         }
       ]
     },
     {
-      "name": "Constelación de la Araña",
+      "name": "Constelaci\u00f3n de la Ara\u00f1a",
       "starts": [
-        {
-          "id": 3,
-          "label": "Alpha53",
-          "linkedTo": [
-            {
-              "starId": 12,
-              "distance": 95
-            }
-          ],
-          "radius": 1,
-          "timeToEat": 1,
-          "stayDuration": 8.0,
-          "amountOfEnergy": 3,
-          "coordenates": {
-            "x": 75,
-            "y": 43
-          },
-          "hypergiant": true,
-          "researchEnergyCost": 0.9
-        },
         {
           "id": 12,
           "label": "Beta178",
           "linkedTo": [
-            {
-              "starId": 3,
-              "distance": 45
-            },
             {
               "starId": 13,
               "distance": 28
@@ -195,19 +167,23 @@
           "timeToEat": 4,
           "stayDuration": 15.0,
           "amountOfEnergy": 1,
-          "healthImpact": -3.0,
-          "lifeTimeImpact": -12,
+          "healthImpact": -10.8,
+          "lifeTimeImpact": -8,
           "coordenates": {
             "x": 123,
             "y": 167
           },
           "hypergiant": false,
-          "researchEnergyCost": 0.8
+          "researchEnergyCost": 7.5
         },
         {
           "id": 13,
           "label": "Gama23",
           "linkedTo": [
+            {
+              "starId": 3,
+              "distance": 50
+            },
             {
               "starId": 12,
               "distance": 28
@@ -225,14 +201,14 @@
           "timeToEat": 2,
           "stayDuration": 10.0,
           "amountOfEnergy": 5,
-          "healthImpact": 5.0,
-          "lifeTimeImpact": 20,
+          "healthImpact": 2.8,
+          "lifeTimeImpact": 15,
           "coordenates": {
             "x": 189,
             "y": 146
           },
           "hypergiant": true,
-          "researchEnergyCost": 1.6
+          "researchEnergyCost": 6.2
         },
         {
           "id": 14,
@@ -251,28 +227,24 @@
           "timeToEat": 1,
           "stayDuration": 5.0,
           "amountOfEnergy": 2,
-          "healthImpact": 1.5,
-          "lifeTimeImpact": 8,
+          "healthImpact": 1.0,
+          "lifeTimeImpact": 5,
           "coordenates": {
             "x": 155,
             "y": 110
           },
           "hypergiant": false,
-          "researchEnergyCost": 1.5
+          "researchEnergyCost": 3.8
         }
       ]
     },
     {
-      "name": "Constelación del Dragón",
+      "name": "Constelaci\u00f3n del Drag\u00f3n",
       "starts": [
         {
           "id": 6,
           "label": "Zeta14",
           "linkedTo": [
-            {
-              "starId": 5,
-              "distance": 25
-            },
             {
               "starId": 7,
               "distance": 18
@@ -286,14 +258,14 @@
           "timeToEat": 2,
           "stayDuration": 7.0,
           "amountOfEnergy": 3,
-          "healthImpact": 3.5,
-          "lifeTimeImpact": 15,
+          "healthImpact": 2.4,
+          "lifeTimeImpact": 10,
           "coordenates": {
             "x": 130,
             "y": 45
           },
           "hypergiant": false,
-          "researchEnergyCost": 1.8
+          "researchEnergyCost": 4.5
         },
         {
           "id": 7,
@@ -306,24 +278,20 @@
             {
               "starId": 8,
               "distance": 24
-            },
-            {
-              "starId": 9,
-              "distance": 35
             }
           ],
           "radius": 0.7,
           "timeToEat": 1,
           "stayDuration": 5.0,
           "amountOfEnergy": 2,
-          "healthImpact": -1.5,
-          "lifeTimeImpact": -8,
+          "healthImpact": -2.7,
+          "lifeTimeImpact": -6,
           "coordenates": {
             "x": 165,
             "y": 60
           },
           "hypergiant": false,
-          "researchEnergyCost": 0.6
+          "researchEnergyCost": 1.5
         },
         {
           "id": 8,
@@ -346,49 +314,45 @@
           "timeToEat": 3,
           "stayDuration": 12.0,
           "amountOfEnergy": 4,
-          "healthImpact": 5.0,
-          "lifeTimeImpact": 20,
+          "healthImpact": 3.5,
+          "lifeTimeImpact": 18,
           "coordenates": {
             "x": 145,
             "y": 25
           },
           "hypergiant": true,
-          "researchEnergyCost": 1.1
+          "researchEnergyCost": 2.8
         }
       ]
     },
     {
-      "name": "Constelación del Fénix",
+      "name": "Constelaci\u00f3n del F\u00e9nix",
       "starts": [
         {
           "id": 9,
           "label": "Iota12",
           "linkedTo": [
             {
-              "starId": 7,
-              "distance": 35
-            },
-            {
               "starId": 10,
               "distance": 22
             },
             {
               "starId": 11,
-              "distance": 19
+              "distance": 28
             }
           ],
           "radius": 0.5,
           "timeToEat": 2,
           "stayDuration": 6.0,
           "amountOfEnergy": 2,
-          "healthImpact": 0.0,
-          "lifeTimeImpact": 0,
+          "healthImpact": -1.8,
+          "lifeTimeImpact": -4,
           "coordenates": {
             "x": 25,
             "y": 120
           },
           "hypergiant": false,
-          "researchEnergyCost": 0.5
+          "researchEnergyCost": 1.2
         },
         {
           "id": 10,
@@ -407,14 +371,14 @@
           "timeToEat": 1,
           "stayDuration": 4.0,
           "amountOfEnergy": 1,
-          "healthImpact": -2.0,
-          "lifeTimeImpact": -10,
+          "healthImpact": -3.6,
+          "lifeTimeImpact": -7,
           "coordenates": {
             "x": 55,
             "y": 155
           },
           "hypergiant": false,
-          "researchEnergyCost": 0.8
+          "researchEnergyCost": 2.0
         },
         {
           "id": 11,
@@ -422,34 +386,30 @@
           "linkedTo": [
             {
               "starId": 9,
-              "distance": 45
+              "distance": 28
             },
             {
               "starId": 10,
-              "distance": 38
-            },
-            {
-              "starId": 12,
-              "distance": 88
+              "distance": 16
             }
           ],
           "radius": 0.6,
           "timeToEat": 3,
           "stayDuration": 8.0,
           "amountOfEnergy": 3,
-          "healthImpact": 2.8,
-          "lifeTimeImpact": 11,
+          "healthImpact": 2.0,
+          "lifeTimeImpact": 9,
           "coordenates": {
             "x": 85,
             "y": 130
           },
           "hypergiant": false,
-          "researchEnergyCost": 1.3
+          "researchEnergyCost": 3.2
         }
       ]
     },
     {
-      "name": "Constelación del León",
+      "name": "Constelaci\u00f3n del Le\u00f3n",
       "starts": [
         {
           "id": 15,
@@ -457,29 +417,29 @@
           "linkedTo": [
             {
               "starId": 8,
-              "distance": 65
+              "distance": 40
             },
             {
               "starId": 13,
-              "distance": 80
+              "distance": 38
             },
             {
               "starId": 16,
-              "distance": 55
+              "distance": 30
             }
           ],
           "radius": 0.8,
           "timeToEat": 4,
           "stayDuration": 9.0,
           "amountOfEnergy": 4,
-          "healthImpact": 4.5,
-          "lifeTimeImpact": 16,
+          "healthImpact": 3.1,
+          "lifeTimeImpact": 14,
           "coordenates": {
             "x": 170,
             "y": 185
           },
           "hypergiant": true,
-          "researchEnergyCost": 0.5
+          "researchEnergyCost": 1.2
         },
         {
           "id": 16,
@@ -487,25 +447,25 @@
           "linkedTo": [
             {
               "starId": 15,
-              "distance": 55
+              "distance": 30
             },
             {
               "starId": 17,
-              "distance": 40
+              "distance": 25
             }
           ],
           "radius": 0.5,
           "timeToEat": 2,
           "stayDuration": 5.0,
           "amountOfEnergy": 2,
-          "healthImpact": 1.8,
-          "lifeTimeImpact": 7,
+          "healthImpact": 1.3,
+          "lifeTimeImpact": 5,
           "coordenates": {
             "x": 130,
             "y": 195
           },
           "hypergiant": false,
-          "researchEnergyCost": 0.8
+          "researchEnergyCost": 2.0
         },
         {
           "id": 17,
@@ -513,25 +473,21 @@
           "linkedTo": [
             {
               "starId": 16,
-              "distance": 40
-            },
-            {
-              "starId": 11,
-              "distance": 75
+              "distance": 25
             }
           ],
           "radius": 0.4,
           "timeToEat": 2,
           "stayDuration": 4.0,
           "amountOfEnergy": 1,
-          "healthImpact": -0.5,
-          "lifeTimeImpact": -2,
+          "healthImpact": -0.9,
+          "lifeTimeImpact": -3,
           "coordenates": {
             "x": 100,
             "y": 180
           },
           "hypergiant": false,
-          "researchEnergyCost": 1.5
+          "researchEnergyCost": 3.8
         }
       ]
     }
